fix: make the content of the side bar visible on top of the footer

--- a/src/app/editor/editor.component.css
+++ b/src/app/editor/editor.component.css
@@ -90,6 +90,10 @@ sketch-container {
   min-width: 200px;
 }
 
+.sidebar.layers {
+  margin-bottom: 60px;
+}
+
 .sidebar.settings {
   min-width: 200px;
 }
